frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.example.com       
      http:
        paths:
          - path: /api(.*)
            pathType: ImplementationSpecific
            backend:
                service:
                    name: backend-service
                    port:
                        number: 5000
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: frontend-service
                    port:
                     number: 5173
